show test result

--- a/build.gradle
+++ b/build.gradle
@@ -29,4 +29,8 @@ dependencies {
 
 tasks.named('test') {
     useJUnitPlatform()
+    testLogging {
+        events "passed", "skipped", "failed"
+        showStandardStreams = true
+    }
 }
