--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=playwright
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=${POSTGRES_URL}
 spring.datasource.username=postgres
 spring.datasource.password=postgres
