added current problem

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,3 +9,4 @@ jobs:
         uses: isbang/compose-action@v1.5.1
         with:
           compose-file: "./docker-compose.yaml"
+    # FIXME: if test failed, ci judges success
