--- a/build.gradle
+++ b/build.gradle
@@ -27,10 +27,9 @@ dependencies {
     testImplementation "com.google.truth:truth:1.4.2"
 }
 
-tasks.named('test') {
+tasks.named('test', Test) {
     useJUnitPlatform()
     testLogging {
-        events "passed", "skipped", "failed"
-        showStandardStreams = true
+        events "passed", "failed"
     }
 }
