--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,6 +2,8 @@ version: '3'
 services:
   db:
     image: postgres:latest
+    volumes:
+      - "./src/main/resources/database:/docker-entrypoint-initdb.d"
     ports:
       - "5432:5432"
     environment:
