--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,17 @@
 version: '3'
 services:
+  app:
+    build:
+      context: .
+      dockerfile: ./dockerfiles/app/Dockerfile
+    ports:
+      - "8080:8080"
+    environment:
+      POSTGRES_URL: "jdbc:postgresql://db:5432/postgres"
+    depends_on:
+      - db
+    volumes:
+      - ./src:/app/src
   db:
     image: postgres:latest
     volumes:
