--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,3 +11,17 @@ jobs:
           compose-file: "./docker-compose.yaml"
           test-container: "app"
           test-command: "gradle test"
+
+  e2eTest:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@417ae3ccd767c252f5661f1ace9f835f9654f2b5
+
+      - name: run spring boot application
+        run: ./gradlew bootRun
+
+      - name: execute e2e test
+        run: ./gradlew e2eTest
