--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -8,17 +8,25 @@ jobs:
       - name: run unittest
         uses: adambirds/docker-compose-action@v1.3.0
         with:
-          compose-file: "./docker-compose.yaml"
-          test-container: "app"
-          test-command: "gradle test"
+          compose-file: ./docker-compose.yaml
+          test-container: app
+          test-command: gradle test
 
   e2eTest:
     runs-on: ubuntu-latest
+    env:
+      POSTGRES_URL: "jdbc:postgresql://localhost:5432/postgres"
     steps:
       - uses: actions/checkout@v4
 
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@417ae3ccd767c252f5661f1ace9f835f9654f2b5
+
+      - name: run unittest
+        uses: adambirds/docker-compose-action@v1.3.0
+        with:
+          services: |
+            db
 
       - name: run spring boot application
         run: ./gradlew bootRun
