--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,6 +16,17 @@ jobs:
     runs-on: ubuntu-latest
     env:
       POSTGRES_URL: "jdbc:postgresql://localhost:5432/postgres"
+
+    services:
+      postgres:
+        image: postgres
+        env:
+          POSTGRES_DB: postgres
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+        ports:
+          - 5432:5432
+
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v4
@@ -25,12 +36,6 @@ jobs:
 
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@417ae3ccd767c252f5661f1ace9f835f9654f2b5
-
-      - name: run unittest
-        uses: adambirds/docker-compose-action@v1.3.0
-        with:
-          services: |
-            db
 
       - name: run spring boot application
         run: ./gradlew bootRun
