--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -38,7 +38,6 @@ jobs:
         uses: gradle/actions/setup-gradle@417ae3ccd767c252f5661f1ace9f835f9654f2b5
 
       - name: run spring boot application
-        run: ./gradlew bootRun
-
-      - name: execute e2e test
-        run: ./gradlew e2eTest
+        run: |
+          gradle bootRun &
+          gradle e2eTest
